--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.2.28",
     "@types/styled-components": "^5.1.28",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
