--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
+    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.2.28",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.28",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
