--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.2.28",
+    "@types/react-custom-scrollbars": "^4.0.10",
+    "@types/react-router-hash-link": "^2.4.7",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.28",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
